INCLUDES = $(GLIB_CFLAGS) -I$(top_srcdir)/app -DHAVE_INET

noinst_LIBRARIES = libgsnmp.a

libgsnmp_a_SOURCES =	\
	g_asn1.c	\
	g_asn1.h	\
	g_dispatch.c	\
	g_dispatch.h	\
	g_md5.c		\
	g_md5.h		\
	g_message.c	\
	g_message.h	\
	g_security.c	\
	g_security.h	\
	g_session.c	\
	g_session.h	\
	g_sha.c		\
	g_sha.h		\
	g_snmp.c	\
	g_snmp.h	\
	g_snmp_table.c	\
	g_snmp_table.h	\
	g_transport.c	\
	g_transport.h	\
	g_utils.c	\
	g_utils,h
